// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alpha renders correctly 1`] = `
<DocumentFragment>
  <div
    class="alpha-picker "
    style="position: relative; width: 316px; height: 16px;"
  >
    <div
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 2px; border-radius: 2px;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden; -webkit-border-radius: 2px; border-radius: 2px;"
      >
        <div
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
        />
      </div>
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(to right, rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%); -webkit-border-radius: 2px; border-radius: 2px;"
      />
      <div
        style="position: relative; height: 100%; margin: 0px 3px;"
      >
        <div
          style="position: absolute; left: 100%;"
        >
          <div
            style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-9px, -1px); transform: translate(-9px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alpha renders vertically 1`] = `
<DocumentFragment>
  <div
    class="alpha-picker "
    style="position: relative; width: 20px; height: 200px;"
  >
    <div
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 2px; border-radius: 2px;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden; -webkit-border-radius: 2px; border-radius: 2px;"
      >
        <div
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
        />
      </div>
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%); -webkit-border-radius: 2px; border-radius: 2px;"
      />
      <div
        style="position: relative; height: 100%; margin: 0px 3px;"
      >
        <div
          style="position: absolute; left: 0px; top: 100%;"
        >
          <div
            style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-3px, -9px); transform: translate(-3px, -9px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AlphaPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-9px, -1px); transform: translate(-9px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
  />
</DocumentFragment>
`;
